--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/WEB-INF/web.xml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
         <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
         <param-value>true</param-value>
     </context-param>
+    
+     <context-param>
+        <param-name>org.icefaces.render.auto</param-name>
+        <param-value>false</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
