--- a/Documents/NetBeansProjects/ecoBio/pom.xml
+++ b/Documents/NetBeansProjects/ecoBio/pom.xml
@@ -22,12 +22,18 @@
             <layout>default</layout>  
         </repository>
     </repositories>
-    
+
     <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.3</version>
+<!--            <version>1.3</version>-->
+            <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.icefaces</groupId>
