--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/WEB-INF/web.xml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,27 @@
         <param-value>false</param-value>
     </context-param>
    
+<!--    Filtre pour l'upload d'image-->
+<filter>
+<filter-name>PrimeFaces FileUpload Filter</filter-name>
+<filter-class>filter.FileUploadFilter</filter-class>
+<init-param>
+<param-name>thresholdSize</param-name>
+<param-value>51200</param-value>
+</init-param>
+
+<init-param>
+<param-name>uploadDirectory</param-name>
+<param-value>C/Temp</param-value>
+</init-param>
+</filter>
+<filter-mapping>
+<filter-name>PrimeFaces FileUpload Filter</filter-name>
+<servlet-name>Faces Servlet</servlet-name>
+</filter-mapping>
+     
+
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
