--- a/Documents/NetBeansProjects/ecoBio/pom.xml
+++ b/Documents/NetBeansProjects/ecoBio/pom.xml
@@ -27,7 +27,13 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.4</version>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+<!--            <version>1.3</version>-->
+            <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.icefaces</groupId>
@@ -94,9 +100,26 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.10-beta2</version>
+            <version>3.10-FINAL</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.5-beta5</version>
         </dependency>
         
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        
+        <dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.17</version>
+</dependency>
+
         <!-- Hibernate dependencies -->
  
         <dependency>
@@ -111,7 +134,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.17</version>
         </dependency>
-    
+
     </dependencies>
 
     <build>
